@@ -2,7 +2,7 @@
 .\" ***************************************************************
 .\" 
 .\" name sect foot-centre foot-left  head-centre   origin  architecture
-.TH cvs2ticker 1  "April 2000"  "tickertape.org"  "User Commands" "tickertape.org" "Elvin Project"
+.TH cvs2ticker 1  "April 2000"  "tickertape.org"  "User Commands" "tickertape.org" "tickertape Project"
 .SH NAME
 cvs2ticker \- CVS loginfo producer for Tickertape
 .SH SYNOPSIS
@@ -44,12 +44,6 @@ Completed without error.
 .TP 4
 1
 A problem occurred.  See the debugging output for further information.
-.SH ENVIRONMENT
-.PP
-.TP 4
-.B DSTCDIR
-Used to locate all the required files.  Must be set correctly for the
-application to work.
 .SH "SEE ALSO"
 .PP
 .IR cvs (1),
@@ -58,13 +52,11 @@ application to work.
 .IR jtickertape (1),
 .IR xtickertape (1)
 .PP
-.B "http://elvin.dstc.com/"
+.B "http://www.tickertape.org/"
 .SH AUTHOR
 .PP
-Original version by David Leonard with  ongoing hacks by David Arnold
+Original version by David Leonard with ongoing hacks by David Arnold
 and Bill Segall.
 .PP
-Email can be directed to 
-.B elvin@dstc.com
 .\" ***************************************************************
 
