@@ -5,7 +5,7 @@ distribution-name= RedHat 7.1
 requires= BeOpen-Python >= 2.0, python-elvin >= 4.0b1
 provides= cvs2ticker
 icon= image-rpm.gif
-packager= David Arnold <elvin@dstc.com>
+packager= David Arnold <davida@pobox.com>
 doc_files= README
 	   INSTALL
 	   COPYING
